# tmlcs-s

TMLCS_Proyect_Beta_2/: CMakeLists.txt  FindCryptopp.cmake  main.cpp
TMLCS_Proyect_Beta_2/SSL_Certificates/: server.crt  server.key
TMLCS_Proyect_Beta_2/src/: CMakeLists.txt  database.cpp  database.h  request.cpp  request.h  response.cpp  response.h  router.cpp  router.h  server.cpp  server.h  server_config.cpp  server_config.h  ssl_config.cpp  ssl_config.h  ssl_server.cpp  ssl_server.h  user.cpp  user.h
frontend/templates/pages/index/: .main.js.swn  .main.js.swo  head.js  header.js  index.html  main.js  main.js.save.1
frontend/templates/static/: index.css  normalize.css
